# ingress-auth-poc

./: README.md  Tiltfile
apps/auth-svc/: Dockerfile  README.md  acl.yaml  pyproject.toml
apps/auth-svc/src/: acl.yaml  log_config.yaml
apps/auth-svc/src/auth_svc/: config.py  main.py
apps/auth-svc/tests/: test_main.py
manifests/: kustomization.yaml
manifests/auth-service/: acl.yaml  deployment-auth-service.yaml  kustomization.yaml  service-auth-service.yaml
manifests/metrics-server/: kustomization.yaml
manifests/protected-service/: deployment-example-service.yaml  ingress-noauth.yaml  ingress.yaml  kustomization.yaml  service-example-service.yaml
