[project]
name = "auth-svc"
version = "0.1.0"
description = "Simple authentication service"
authors = [{ name = "Robert Moucha", email = "robert.moucha@gooddata.com" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "pyaml>=24.9.0",
    "pyjwt>=2.9.0",
    "a2wsgi>=1.10.7",
    "uvloop>=0.21.0",
    "httptools>=0.6.4",
]

readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
virtual = true
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "httpx>=0.27.2",
    "pytest-asyncio>=0.24.0",
    "types-pyyaml>=6.0.12.20240917",
    "pytest-cov>=5.0.0"
]

[tool.pytest.ini_options]
pythonpath = "src"
python_files = ["test_*.py"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--no-cov-on-fail",
]
